# secrds

./: .gitignore  BUILD-EBPF.md  Cargo.toml  Makefile  QUICK_START.md  README.md  TESTING.md  build-ebpf.sh  build.sh  clear-all.sh  config.yaml.example  config.yaml.minimal  ebpf-detector.service  faild_ssh_test.sh  find-socket-offsets.sh  fix-and-test.sh  fresh-test.sh  go.mod  install.sh  logrotate.conf  secrds.service  setup-service.sh  test-ssh-attacks.sh
.cargo/: config.toml
.github/workflows/: ci.yml
bpf/: ssh_accept.bpf.c  ssh_auth.bpf.c
cmd/secrds/: main.go
ebpf-detector-agent/: Cargo.toml
ebpf-detector-agent/src/: config.rs  daemon.rs  ebpf_loader.rs  event_processor.rs  health.rs  main.rs  storage.rs  telegram_client.rs  threat_detector.rs
ebpf-detector-cli/: Cargo.toml
ebpf-detector-cli/src/: main.rs  utils.rs
ebpf-detector-cli/src/commands/: alerts.rs  config.rs  mod.rs  restart.rs  start.rs  stats.rs  status.rs  stop.rs
ebpf-detector-ebpf/: Cargo.toml
ebpf-detector-ebpf-c/: Makefile  common.h  ssh_kprobe.c  tcp_trace.c
ebpf-detector-ebpf/src/: lib.rs  ssh_monitor.rs  tcp_monitor.rs
internal/logger/: logger.go
internal/monitor/: monitor.go
secrds-agent/: Cargo.toml
secrds-agent/internal/config/: config.go
secrds-agent/internal/detector/: threat.go
secrds-agent/internal/kernel/: loader.go
secrds-agent/internal/processor/: event.go
secrds-agent/internal/storage/: storage.go
secrds-agent/internal/telegram/: client.go
secrds-agent/src/: config.rs  detector.rs  main.rs  processor.rs  storage.rs  telegram.rs
secrds-cli/: Cargo.toml
secrds-cli/cmd/: alerts.go
secrds-cli/src/: commands.rs  main.rs
secrds-ebpf/: Cargo.toml  README.md
secrds-ebpf/src/: lib.rs
secrds-programs/: ssh_kprobe.c
