[workspace]
members = [
    "ebpf-detector-ebpf",
    "ebpf-detector-agent",
    "ebpf-detector-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["eBPF Security Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
aya = { version = "0.13.1", features = ["async_tokio"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
ipnet = "2.9"
toml = "0.8"
toml_edit = "0.22"

