[workspace]
members = [
    "secrds-ebpf",
    "secrds-agent",
    "secrds-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["secrds"]
license = "Dual BSD/GPL"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"