[package]
name = "secrds-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "secrds-agent"
path = "src/main.rs"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
bytes = "1.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
ipnet = "2.9"
nix = "0.28"
chrono = "0.4"

