[package]
name = "secrds-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["bin"]

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", branch = "main" }

[profile.release]
panic = "abort"
